service.yml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: ingress-nginx
  labels:
    app: apache
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: apache
